--- a/trunk/diamandas/userpanel/templates/userpanel/password_change.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_change.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>{% trans "Change Password" %}</h2>
 {% if form.has_errors %}
-<div class="errmsg">{% trans "There was a problem with password change. Did you entered correct email address?" %}</div>
+<div class="errmsg">{% trans "There was a problem with password change. Did you entered correct current password?" %}</div>
 {% endif %}
 
 <form method="post" action=".">
