--- a/trunk/diamandas/pages/templates/pages/show_news.html
+++ b/trunk/diamandas/pages/templates/pages/show_news.html
@@ -11,16 +11,16 @@
 {{ page.text|cbc|safe }}
 <ul class="newsbox">
 	<li class="added">{{ page.date|date:"d.m.Y" }}</li>
-	<li class="comment">
+	{% if add_topic %}<li class="comment">
 		{% if page.coment_topic %}
 			<a href="/forum/topic/1/{{ page.coment_topic.id }}/">{% trans "Read comments" %}{% if page.comments_count %} ({{ page.comments_count }}){% endif %}</a>
 		{% else %}
 			<a href="?c=ok#c">{% trans "Comments" %}{% if page.comments_count %} ({{ page.comments_count }}){% endif %}</a>
 		{% endif %}
-	</li>
+	</li>{% endif %}
 	<li class="aauthor">{{ page.author }}</li>
 	{% if page.is_update %}<li class="update">{{ page.changes }}</li>{% endif %}
-	{% if not show_comment %}<li><input type="button" value="{% trans "Add a Comment" %}" onclick="location.assign('/w/p/{{ page.slug }}/?c=ok');" /></li>{% endif %}
+	{% if add_topic %}{% if not show_comment %}<li><input type="button" value="{% trans "Add a Comment" %}" onclick="location.assign('/w/p/{{ page.slug }}/?c=ok');" /></li>{% endif %}{% endif %}
 
 </ul>
 {% if add_topic %}
@@ -68,7 +68,7 @@
 
 {% endblock %}
 {% block pagemenu %}
-<li><a href="?c=ok#c">{% trans "Comments" %} ({{ page.comments_count }})</a></li>
+{% if add_topic %}<li><a href="?c=ok#c">{% trans "Comments" %} ({{ page.comments_count }})</a></li>{% endif %}
 <li><a href="/w/n/">{% trans "Browse news" %}</a></li>
 
 {% if page.current_book %}
