updated PO files, update Polish translation, updated info text when comment can't be added.

--- a/trunk/diamandas/pages/templates/feed/forum_block.html
+++ b/trunk/diamandas/pages/templates/feed/forum_block.html
@@ -1,5 +1,5 @@
 <div class="left_feed">
-	<strong>{% if not author_anonymous %}<a href="/userpanel/{{ user_id }}/">{% endif %}{{ username }}{% if not author_anonymous %}</a>{% endif %}</strong><br />
+	<strong>{% if not author_anonymous %}<a>{% endif %}{{ username }}{% if not author_anonymous %}</a>{% endif %}</strong><br />
 	{{ date }}
 </div>
 <div class="right_feed">
