--- a/trunk/diamandas/pages/templates/feed/content_block.html
+++ b/trunk/diamandas/pages/templates/feed/content_block.html
@@ -1,5 +1,5 @@
 <div class="left_feed">
-	<strong><a href="/userpanel/{{ user_id }}/">{{ username }}</a></strong><br />
+	<strong><a>{{ username }}</a></strong><br />
 	{{ date }}
 </div>
 <div class="right_feed">
