added submission preview/accept and smilies parsing in BBCode

--- a/trunk/diamandas/pages/templates/feed/content_block.html
+++ b/trunk/diamandas/pages/templates/feed/content_block.html
@@ -4,5 +4,5 @@
 </div>
 <div class="right_feed">
 	<div class="{{ cssclass }}"><a href="/w/p/{{ slug }}/">{{ title }}</a></div>
-{{ text }}
+{{ text|safe }}
 <!-- --></div>
