--- a/trunk/diamandas/pages/templates/feed/forum_insert.html
+++ b/trunk/diamandas/pages/templates/feed/forum_insert.html
@@ -1,2 +1,2 @@
 <div class="margin_feed"></div><div class="{{ cssclass }}"><a href="/forum/topic/{{ pagination_page }}/{{ topic_id }}/">{{ prefix }}{{ topic_title }}</a></div>
-{{ text }}<!-- -->
+{{ text|safe }}<!-- -->
