--- a/trunk/diamandas/pages/templates/feed/forum_block.html
+++ b/trunk/diamandas/pages/templates/feed/forum_block.html
@@ -4,5 +4,5 @@
 </div>
 <div class="right_feed">
 	<div class="{{ cssclass }}"><a href="/forum/topic/{{ pagination_page }}/{{ topic_id }}/">{{ prefix }}{{ topic_title }}</a></div>
-{{ text }}
+{{ text|safe }}
 <!-- --></div>
