--- a/trunk/site_media/layout/style.css
+++ b/trunk/site_media/layout/style.css
@@ -59,8 +59,12 @@ color:#C3C3FF;
 }
 
 
-
-
+iframe
+{
+border:1px solid #4993DC;
+width:100%;
+height:400px;
+}
 p
 {
 margin-top:0px;
@@ -454,14 +458,14 @@ p.toptions a
 	width:160px;
 	background:#EEEEEE;
 	padding:4px;
-	padding-top:10px;
+	padding-top:5px;
 	font-size:11px;
 }
 .rightbottompost
 {
 	background:#DDDDDD;
 	padding:4px;
-	padding-top:10px;
+	padding-top:5px;
 	overflow:auto;
 	font-size:11px;
 }
