--- a/trunk/diamandas/pages/templates/feed/forum_rss.html
+++ b/trunk/diamandas/pages/templates/feed/forum_rss.html
@@ -1,6 +1,6 @@
 <item>
-<guid>http://www.{{ domain }}/forum/topic/{{ pagination_page }}/{{ topic_id }}/</guid>
-<link>http://www.{{ domain }}/forum/topic/{{ pagination_page }}/{{ topic_id }}/</link>
+<guid>{{ domain }}/forum/topic/{{ pagination_page }}/{{ topic_id }}/</guid>
+<link>{{ domain }}/forum/topic/{{ pagination_page }}/{{ topic_id }}/</link>
 <title>{{ prefix }}{{ title }}</title>
 <description><![CDATA[{{ description|safe }}]]></description>
 <pubDate>{{ date }}</pubDate>
