--- a/trunk/diamandas/pages/templates/feed/rss.html
+++ b/trunk/diamandas/pages/templates/feed/rss.html
@@ -1,12 +1,12 @@
 <rss version="2.0"><channel>
 <title>{{ site_name }}</title>
-<link>http://www.{{ domain }}/</link>
+<link>{{ domain }}/</link>
 <description>{{ site_desc }}</description>
 <language>{{ site_lang }}</language>
 <image>
 <title>{{ site_name }}</title>
-<url>http://www.{{ domain }}/site_media/layout/tux.png</url>
-<link>http://www.{{ domain }}/</link>
+<url>{{ domain }}/site_media/layout/tux.png</url>
+<link>{{ domain }}/</link>
 <width>132</width>
 <height>124</height>
 </image>
