--- a/trunk/diamandas/pagestats/templates/stats/google.html
+++ b/trunk/diamandas/pagestats/templates/stats/google.html
@@ -15,6 +15,7 @@
 {% else %}
 <ul>
 <li><b>{% trans "Google" %}</b>: {{ google }} %</li>
+<li><b>{% trans "Live Search" %}</b>: {{ livese }} %</li>
 <li><b>{% trans "Wikipedia" %}</b>: {{ wiki }} %</li>
 </ul>
 {% endif %}
@@ -39,7 +40,7 @@
 <ul>
 <li><a href="/stats/entries/">{% trans "Unique Entries" %}</a></li>
 <li><a href="/stats/refs/">{% trans "Last Referers" %}</a></li>
-<li><a href="/stats/google/">{% trans "Google Keywords" %}</a></li>
+<li><a href="/stats/google/">{% trans "Search Engines" %}</a></li>
 <li><a href="/stats/delete/" onclick="return confirm('{% trans "Delete all data ?" %}')">{% trans "Delete Stat Data" %}</a></li>
 </ul>
 </div>
