--- a/trunk/diamandas/pagestats/templates/stats/refs.html
+++ b/trunk/diamandas/pagestats/templates/stats/refs.html
@@ -27,7 +27,7 @@
 <ul>
 <li><a href="/stats/entries/">{% trans "Unique Entries" %}</a></li>
 <li><a href="/stats/refs/">{% trans "Last Referers" %}</a></li>
-<li><a href="/stats/google/">{% trans "Google Keywords" %}</a></li>
+<li><a href="/stats/google/">{% trans "Search Engines" %}</a></li>
 <li><a href="/stats/delete/" onclick="return confirm('{% trans "Delete all data ?" %}')">{% trans "Delete Stat Data" %}</a></li>
 </ul>
 </div>
