adding missing files, fixes for content submission and translations

--- a/trunk/diamandas/pages/templates/pages/submit.html
+++ b/trunk/diamandas/pages/templates/pages/submit.html
@@ -6,6 +6,8 @@
 {% block crumb %}<a href="/">{% trans "Home" %}</a>{% endblock %}
 
 {% block content %}
+{% trans "Use this form to submit content on this site. To format the text you can use simple markup called markdown or you can just enter plain text. Do not use HTML." %}
+<br /><br />
 
 <form method="post" action="./">
     
