--- a/trunk/diamandas/pages/templates/pages/body.html
+++ b/trunk/diamandas/pages/templates/pages/body.html
@@ -10,7 +10,11 @@
 <link rel="shortcut icon" href="/site_media/layout/favicon.ico" />
 <script src="/site_media/layout/jquery.pack.js" type="text/javascript"></script>
 <script src="/site_media/layout/facebox/facebox.js" type="text/javascript"></script>
-<script src="/site_media/layout/biblioteka.js" type="text/javascript"></script>
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+   $('a[rel*=facebox]').facebox() 
+ })
+</script>
 {% block meta %}{% endblock %}
 </head>
 <body>
