--- a/trunk/site_media/layout/style.css
+++ b/trunk/site_media/layout/style.css
@@ -20,7 +20,6 @@ font-family:"DejaVu Sans", verdana, tahoma, arial;
 {
 	color:white;
 }
-
 #top
 {
 padding:0px;
@@ -57,8 +56,6 @@ padding-left:10px;
 {
 color:#C3C3FF;
 }
-
-
 iframe
 {
 border:1px solid #4993DC;
@@ -83,7 +80,6 @@ img
 {
 border:0px;
 }
-
 .box
 {
 border:1px solid gray;
@@ -93,8 +89,6 @@ margin-bottom:5px;
 margin-top:5px;
 overflow:hidden;
 }
-
-
 /*
 Styles for the center div (content Block)
  */
@@ -159,7 +153,6 @@ color:#003366;
 {
 color:#002142;
 }
-
 #center th strong
 {
 color: #fff;
@@ -194,13 +187,11 @@ border-left: solid 1px #6C6C6C;
 border-bottom:1px solid #6C6C6C;
 border-top:1px solid #6C6C6C;
 }
-
 #center tr.small
 {
 	font-size:11px;
 	background: #E3E3E3;
 }
-
 #center tr.small_solved
 {
 	font-size:11px;
@@ -246,7 +237,6 @@ background: #E3E3E3;
 {
 background: #D6D6D6;
 }
-
 /*
 Styles for the main page - right and left column
  */
@@ -273,7 +263,6 @@ color:black !important;
 {
 margin-bottom:3px;
 }
-
 #right
 {
 margin-left:10px;
@@ -281,7 +270,6 @@ float:right;
 width:60%;
 font-size:11px;
 }
-
 /*
 Styles for the what's new Feed
  */
@@ -289,12 +277,11 @@ Styles for the what's new Feed
 {
 padding:5px; background-color:#f0f0f0; border-bottom:1px solid #DDDDDD;
 padding-left:27px;
-background-image:url(user.png);
+background-image:url(user2.png);
 background-repeat:no-repeat;
 background-position:1% 50%;
 color:gray;
 }
-
 .user2
 {
 padding:5px; border-bottom:1px solid #DDDDDD;
@@ -305,7 +292,6 @@ background-position:1% 50%;
 background-color:#FBFBFB;
 color:gray;
 }
-
 .feed
 {
 background-color:#F5F7F1;
@@ -326,18 +312,16 @@ width:20%;
 float:left;
 padding:3px;
 }
-
 .right_feed
 {
 padding:3px;
 overflow:auto;
 background-color:white;
 }
-
 .forum_feed
 {
 padding-left:27px;
-background-image:url(forum.png);
+background-image:url(reply.png);
 background-repeat:no-repeat;
 background-position:1% 50%;
 }
@@ -369,7 +353,6 @@ background-image:url(document_edit.png);
 background-repeat:no-repeat;
 background-position:1% 50%;
 }
-
 #feed_rss
 {
 padding-left:20px;
@@ -381,14 +364,11 @@ border-bottom:3px solid #4993DC;
 font-size:16px;
 font-weight:bold;
 }
-
 .margin_feed
 {
 border-bottom:1px solid #F5F7F1;
 margin-bottom:10px;
 }
-
-
 /*
 Styles for forum
 */
@@ -402,9 +382,6 @@ Styles for forum
 	height:18px;
 	font-size:11px;
 }
-
-
-
 p.toptions
 {
 	margin:0px;
@@ -412,12 +389,10 @@ p.toptions
 	float:right;
 	
 }
-
 p.toptions a
 {
 	color:#494949 !important;
 }
-
 /* Post CSS */
 .posthead
 {
@@ -427,7 +402,6 @@ p.toptions a
 	color:white;
 	padding:3px;
 }
-
 .post
 {
 	border:1px solid #494949;
@@ -451,7 +425,6 @@ p.toptions a
 {
 	max-width:100%;
 }
-
 .leftbottompost
 {
 	float:left;
@@ -469,8 +442,6 @@ p.toptions a
 	overflow:auto;
 	font-size:11px;
 }
-
-
 /*  add post/topic */
 .postform
 {
@@ -484,7 +455,6 @@ p.toptions a
 	border: 1px solid #143D55;
 	font-size:11px;
 }
-
 .postform input
 {
 	margin-bottom:5px;
@@ -492,14 +462,12 @@ p.toptions a
 	width:99%;
 	border: 1px solid #143D55;
 }
-
  .postform textarea
  {
 	width:99%;
 	border: 1px solid #143D55;
  }
- 
- .leftpostform
+.leftpostform
 {
 	float:left;
 	width:130px;
@@ -510,48 +478,19 @@ p.toptions a
 	overflow:auto;
 	padding:5px;
 }
-
 .comments
 {
 	text-align:center;
 }
-
 .comments input
 {
 	width:auto;
 }
-
 #checkboxes input
 {
 	width:auto;
 	padding-right:15px;
 }
-
-/*
-Styles for functional links on forums and content (edit,delete,solve etc.)
-*/
-
-a.quote
-{
-	background-image:url(comment.png);
-	background-repeat:no-repeat;
-	padding-left:17px;
-	padding-right:6px;
-}
-a.edit
-{
-	background-image:url(edit.png);
-	background-repeat:no-repeat;
-	padding-left:17px;
-	padding-right:6px;
-}
-a.delete
-{
-	background-image:url(delete.png);
-	background-repeat:no-repeat;
-	padding-left:19px;
-}
-
 a.solve
 {
 	background-image:url(solve.png);
@@ -564,8 +503,6 @@ a.unsolve
 	background-repeat:no-repeat;
 	padding-left:19px;
 }
-
-
 /* boxes for text */
 .author
 {
@@ -578,8 +515,6 @@ overflow:hidden;
 font-size:14px;
 font-weight:bold;
 }
-
-
 .msg
 {
 text-align:center;
@@ -590,7 +525,6 @@ padding:5px;
 margin-bottom:5px;
 margin-top:5px;
 }
-
 .errmsg
 {
 text-align:center;
@@ -600,54 +534,22 @@ background:#F2F2F2;
 padding:2px;
 margin:10px;
 }
-
 .newsbox
 {
 border-bottom:1px dotted gray;
 border-top:1px dotted gray;
-padding:5px;
+padding:3px;
 margin-bottom:35px;
 margin-top:15px;
 overflow:hidden;
 background-color:#F2F2F2;
 font-size:11px;
 }
-
 .newsbox li
 {
 display:inline;
-padding-right:10px;
+padding-right:15px;
 }
-
-.added
-{
-background-image:url(clock.gif);
-background-repeat:no-repeat;
-padding-left:20px;
-}
-
-.comment
-{
-background-image:url(comment.png);
-background-repeat:no-repeat;
-padding-left:20px;
-}
-
-.aauthor
-{
-background-image:url(user2.png);
-background-repeat:no-repeat;
-padding-left:20px;
-}
-
-
-.update
-{
-background-image:url(update.png);
-background-repeat:no-repeat;
-padding-left:20px;
-}
-
 .bookdiv
 {
 padding:10px;
@@ -655,12 +557,10 @@ background-repeat:no-repeat;
 padding-left:145px;
 height:105px;
 }
-
 .bookcontent
 {
 margin-bottom:30px;
 }
-
 /* pygments, disable highlighing errors */
 .highlight_html .err
 {
@@ -682,33 +582,6 @@ border:0px !important;
 {
 border:0px !important;
 }
-
-/* Tooltip */
-#dhtmlgoodies_tooltip{
-		background-color:#EEE;
-		border:1px solid #000;
-		position:absolute;
-		display:none;
-		z-index:20000;
-		padding:2px;
-		font-size:0.9em;
-		-moz-border-radius:6px;	
-		font-family: "Trebuchet MS", "Lucida Sans Unicode", Arial, sans-serif;
-		
-	}
-	#dhtmlgoodies_tooltipShadow{
-		position:absolute;
-		background-color:#555;
-		display:none;
-		z-index:10000;
-		opacity:0.7;
-		filter:alpha(opacity=70);
-		-khtml-opacity: 0.7;
-		-moz-opacity: 0.7;
-		-moz-border-radius:6px;	
-	}
-
-
 /*Credits: Dynamic Drive CSS Library */
 /*URL: http://www.dynamicdrive.com/style/ */
 /* TOP BLACK MENU FOR BOOKS */
@@ -720,21 +593,18 @@ background: transparent;
 /* overflow:auto; */
 margin:0px;
 }
-
 #modernbricksmenu2 ul{
 margin:0;
 margin-left: 0px; /*margin between first menu item and left browser edge*/
 padding: 0;
 list-style: none;
 }
-
 #modernbricksmenu2 li{
 display: inline;
 margin: 0 2px 0 0;
 padding: 0;
 text-transform:uppercase;
 }
-
 #modernbricksmenu2 a{
 float: left;
 display: block;
@@ -746,18 +616,15 @@ padding: 5px 10px;
 background-color: #000000; /*Brown color theme*/ 
 border-top: 1px solid white;
 }
-
 #modernbricksmenu2 a:hover{
 background-color: #0C2432; /*Brown color theme*/ 
 color: white;
 }
-
 #modernbricksmenu2 #current a{ /*currently selected tab*/
 background-color: #0C2432; /*Brown color theme*/ 
 color: white;
 border-color: #0C2432; /*Brown color theme*/ 
 }
-
 #myform{ /*CSS for sample search box. Remove if desired */
 margin: 0;
 margin-top: 3px;
@@ -765,7 +632,6 @@ padding: 0;
 margin-right:5px;
 display:inline;
 }
-
 #myform .textinput{
 width: 190px;
 background-color: #0C2432;
@@ -773,7 +639,6 @@ border: 1px #3c78b5 solid;
 color:white;
 font-size:11px;
 }
-
 #myform .submit{
 color:white;
 height: 17px;
@@ -781,7 +646,6 @@ background-color: #0C2432;
 border: 1px #3c78b5 solid;
 font-size:11px;
 }
-
 /* TOP BLACK MENU FOR SITE LINKS */
 #modernbricksmenu{
 padding:0px;
@@ -792,7 +656,6 @@ text-align:right;
 /*float:right;*/
 overflow:auto;
 }
-
 #modernbricksmenu ul{
 font: bold 11px Arial;
 margin:0;
@@ -801,14 +664,12 @@ padding: 0;
 list-style: none;
 text-align:right;
 }
-
 #modernbricksmenu li{
 display: inline;
 margin: 0 2px 0 0;
 padding: 0;
 text-transform:uppercase;
 }
-
 #modernbricksmenu a{
 float: right;
 display: block;
@@ -819,17 +680,14 @@ text-decoration: none;
 letter-spacing: 1px;
 background-color: black; /*Default menu color*/
 }
-
 #modernbricksmenu a:hover{
 background-color: #0C2432; /*Menu hover bgcolor*/
 }
-
 #modernbricksmenu #current a{ /*currently selected tab*/
 border-top: 1px #3c78b5 solid;
 border-right: 1px #3c78b5 solid;
 border-left: 1px #3c78b5 solid;
 }
-
 #modernbricksmenuline{
 clear: both;
 padding: 0;
@@ -837,7 +695,6 @@ height: 2px;
 line-height: 5px;
 background: #3c78b5;
 }
-
 /* DOWN BLACK MENU FOR FOOTER  */
 #modernbricksmenu3{
 padding: 0px;
@@ -848,21 +705,18 @@ margin:0px;
 text-align:center;
 margin-bottom:50px;
 }
-
 #modernbricksmenu3 ul{
 margin:0;
 margin-right: 5px; /*margin between first menu item and left browser edge*/
 padding: 0;
 list-style: none;
 }
-
 #modernbricksmenu3 li{
 display: inline;
 margin: 0 2px 0 0;
 padding: 0;
 text-transform:uppercase;
 }
-
 #modernbricksmenu3 a{
 float: left;
 display: block;
@@ -874,12 +728,10 @@ padding: 5px 10px;
 background-color: #000000; /*Brown color theme*/ 
 border-top: 1px solid #143D55;
 }
-
 #modernbricksmenu3 a:hover{
 background-color: #0C2432; /*Brown color theme*/ 
 color: white;
 }
-
 /* CONTENT MENU FOR Content/wiki links  */
 .basictab{
 padding: 0;
@@ -890,12 +742,10 @@ text-align: right;
 
 line-height: 1em !important;
 }
-
 .basictab li{
 display: inline;
 margin: 0;
 }
-
 .basictab li a{
 text-decoration: none;
 padding: 3px 7px;
@@ -905,21 +755,16 @@ border-top: none;
 background-color: #F2F2F2;
 color: black !important;
 }
-
 .basictab li a:visited{
 color: black;
 }
-
 .basictab li a:hover{
 background-color: #3c78b5;
 color: white !important;
 }
-
 .basictab li a:active{
 color: black;
 }
-
-
 .content table
 {
 	/*text-align:center;*/
@@ -933,7 +778,6 @@ color: black;
 {
 	font-weight:bold;
 }
-
 .code { background: #f8f8f8; }
 .code .c { color: #008800; font-style: italic } /* Comment */
 .code .err { border: 1px solid #FF0000 } /* Error */
@@ -993,8 +837,6 @@ color: black;
 .code .vg { color: #B8860B } /* Name.Variable.Global */
 .code .vi { color: #B8860B } /* Name.Variable.Instance */
 .code .il { color: #666666 } /* Literal.Number.Integer.Long */
-
-
 /* blue content box DIV  */
 .content_box_header
 {
@@ -1008,14 +850,12 @@ color: black;
 	text-align:center;
 	margin-top:6px;
 }
-
 .content_box
 {
 	border:1px solid #3C78B5;
 	background:#F5F7F1;
 	padding:4px;
 }
-
 .content_float
 {
 	float:right;
@@ -1023,28 +863,18 @@ color: black;
 	margin:10px;
 	margin-right:0px;
 }
-
-
 input.openid {
   background: url(login-bg.gif) no-repeat;
   background-position: 0 50%;
   padding-left: 20px;
 }
-
-.plus
-{
-list-style-image: url(plus.png);
-}
-.minus
-{
-list-style-image: url(minus.png);
-}
 .book
 {
 list-style-image: url(cbc/book.png);
+padding-left:4px;
 }
 .page
 {
 list-style-image: url(cbc/page.png);
+padding-left:4px;
 }
-
