Better content display in feed

--- a/trunk/diamandas/pages/templates/feed/content_block.html
+++ b/trunk/diamandas/pages/templates/feed/content_block.html
@@ -3,6 +3,6 @@
 	{{ date }}
 </div>
 <div class="right_feed">
-	<div class="{{ cssclass }}"><a href="/w/p/{{ slug }}/">{{ title }}</a></div>
+	<div class="{{ cssclass }}"><a href="/w/p/{{ slug }}/"><b>{{ title }}</b></a></div>
 {{ text|safe }}
 <!-- --></div>
