--- a/trunk/diamandas/pages/templates/feed/content_insert.html
+++ b/trunk/diamandas/pages/templates/feed/content_insert.html
@@ -1,2 +1,2 @@
-<div class="margin_feed"></div><div class="{{ cssclass }}"><a href="/w/p/{{ slug }}/">{{ title }}</a></div>
+<div class="margin_feed"></div><div class="{{ cssclass }}"><a href="/w/p/{{ slug }}/"><b>{{ title }}</b></a></div>
 {{ text|safe }}<!-- -->
