extending RSS chanels and RSS help

--- a/trunk/diamandas/pages/templates/pages/body.html
+++ b/trunk/diamandas/pages/templates/pages/body.html
@@ -61,7 +61,8 @@ jQuery(document).ready(function($) {
 	<div id="modernbricksmenu3">
 	<ul>
 		<li><a href="/w/n/">{% trans "Browse news" %}</a></li>
-		<li><a href="/w/rss/">{% trans "RSS - Latest Publications" %}</a></li>
+		<li><a href="/w/rss/">{% trans "RSS - Latest Articles" %}</a></li>
+		<li><a href="/w/rss/all/">{% trans "RSS - What's new" %}</a></li>
 	</ul>
 	</div>
 </body>
