--- a/trunk/diamandas/pages/templates/pages/rss.html
+++ b/trunk/diamandas/pages/templates/pages/rss.html
@@ -1,11 +1,11 @@
 {% load cbc %}
 <rss version="2.0"><channel>
-<title>{{ site_name }} | {{ book.title }}</title>
+<title>{{ site_name }}</title>
 <link>{{ domain }}/</link>
 <description>{{ site_desc }}</description>
 <language>pl</language>
 <image>
-<title>{{ site_name }} | {{ book.title }}</title>
+<title>{{ site_name }}</title>
 <url>{{ domain }}/site_media/layout/tux.png</url>
 <link>{{ domain }}/</link>
 <width>132</width>
