--- a/trunk/diamandas/pages/templates/pages/show_index.html
+++ b/trunk/diamandas/pages/templates/pages/show_index.html
@@ -4,20 +4,19 @@
 
 {% block content %}
 <div id="right">
-	<a href="/w/rss/" id="feed_rss">{% trans "RSS" %}</a>
-	<h3 style="margin:0px;">{% trans "Whats new?" %}</h3>
-	{{ feed|safe }}
-	
-	{% if onsite %}
+	<a href="/w/rss/all/" id="feed_rss">{% trans "RSS" %}</a>
+	<h3 style="margin:0px;">{% trans "Whats new on" %} {{ siteName }} ?</h3>
+		<div id="intro">{{ intro|safe }}</div>
+		{{ feed|safe }}
+</div>
+<div id="left">
+{{ home_text|safe }}
+
+{% if onsite %}
 	<h3 style="margin-bottom:0px;">{% trans "Users online" %}</h3>
 	{% for t in onsite %}
 		<div class="user{% cycle 1,2 %}">{{ t.user }}</div>
 	{% endfor %}
-	{% endif %}
-</div>
-<div id="left">
-<h3 style="margin:0px;">{{ siteName }}</h3>
-{{ home_text|safe }}
-
+{% endif %}
 </div>
 {% endblock %}
