--- a/trunk/diamandas/pages/templates/pages/sitemap.html
+++ b/trunk/diamandas/pages/templates/pages/sitemap.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
 {% for p in pages %}<url>
-                <loc>http://www.{{ domain }}/w/p/{{ p.slug }}/</loc>
+                <loc>{{ domain }}/w/p/{{ p.slug }}/</loc>
                 <lastmod>{{ p.date }}</lastmod>
                 <changefreq>monthly</changefreq>
                 {% ifequal p.content_type "news" %}<priority>0.5</priority>{% endifequal %}{% ifequal p.content_type "page" %}<priority>0.5</priority>{% endifequal %}{% ifequal p.content_type "book" %}<priority>0.6</priority>{% endifequal %}
