--- a/trunk/site_media/layout/markitup/sets/bbcode/style.css
+++ b/trunk/site_media/layout/markitup/sets/bbcode/style.css
@@ -21,24 +21,17 @@
         background-image:url(images/link.png);
 }
 
-.bbcode .markItUpButton6 a      {
-        background-image:url(images/list-bullet.png);
-}
-.bbcode .markItUpButton7 a      {
-        background-image:url(images/list-numeric.png);
-}
-.bbcode .markItUpButton8 a     {
-        background-image:url(images/list-item.png);
-}
-
-.bbcode .markItUpButton9 a     {
+.bbcode .markItUpButton6 a     {
         background-image:url(images/quotes.png);
 }
-.bbcode .markItUpButton10 a     {
+.bbcode .markItUpButton7 a     {
+        background-image:url(images/code.png);
+}
+.bbcode .markItUpButton8 a     {
         background-image:url(images/code.png);
 }
         
-.bbcode .markItUpButton11 a     {
+.bbcode .markItUpButton9 a     {
         background-image:url(images/clean.png);
 }
 .bbcode .preview a {
