--- a/trunk/diamandas/userpanel/templates/userpanel/password_reset_done.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_reset_done.html
@@ -1,8 +1,14 @@
 {% extends "pages/body.html" %}
 {% load i18n %}
+
+{% block title %}{% trans 'Password reset successful' %}{% endblock %}
+
 {% block content %}
-<h2>{% trans "Password Reset" %}</h2>
-<div style="box"><b>{% trans "Password have been changed succesfuly" %}</b>. <a href="/">{% trans "Go to Main Page" %}</a>.</div>
+
+<h1>{% trans 'Password reset successful' %}</h1>
+
+<p>{% trans "We've e-mailed you instructions for setting your password to the e-mail address you submitted. You should be receiving it shortly." %}</p>
+
 {% endblock %}
 {% block crumb %}<a href="/">{% trans "Home" %}</a> > <a href="/user/">{% trans "User Panel" %}</a>{% endblock %}
 {% block on_user %} id="current"{% endblock %}
