--- a/trunk/diamandas/userpanel/templates/userpanel/password_reset_email.html
+++ b/trunk/diamandas/userpanel/templates/userpanel/password_reset_email.html
@@ -1,6 +1,15 @@
-{% load i18n %}
+{% load i18n %}{% autoescape off %}
+{% trans "You're receiving this e-mail because you requested a password reset" %}
+{% blocktrans %}for your user account at {{ site_name }}{% endblocktrans %}.
 
-{% trans "You requested password reset on" %} {{ site_name }} ({{ domain }}).
+{% trans "Please go to the following page and choose a new password:" %}
+{% block reset_link %}
+{{ protocol }}://{{ domain }}{% url django.contrib.auth.views.password_reset_confirm uidb36=uid, token=token %}
+{% endblock %}
+{% trans "Your username, in case you've forgotten:" %} {{ user.username }}
 
-{% trans "New password" %}: {{ new_password }}
-{% trans "Username" %}: {{ user }}
+{% trans "Thanks for using our site!" %}
+
+{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+
+{% endautoescape %}
