translation fixes and updates

--- a/trunk/diamandas/pages/templates/pages/show_help.html
+++ b/trunk/diamandas/pages/templates/pages/show_help.html
@@ -23,7 +23,7 @@
 		</ul>
 	</div>
 
-	<div class="content_box_header">{% trans "How can I track new artices and posts?" %}</div>
+	<div class="content_box_header">{% trans "How can I track new articles and posts?" %}</div>
 	<div class="content_box">
 		<div style="float:right;"><img src="/site_media/layout/help/feeds.png" alt="" /></div>
 		<ul>
